Mise à jour des Sources.html, ajout de paramètres style.css

--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
     <h2>
         <ul>
             <li>
-                Sécurité des données
+                Sécurité des données, cliquez <a href="pages/Sécurité%20des%20données.html">ici</a>
             </li>
             <li>
-                Pérénité des données
+                Pérénité des données, cliquez <a href="pages/Pérénité%20des%20données.html">ici</a>
             </li>
             <li>
-                Avantages et Inconvénients
+                Avantages et Inconvénients, cliquez <a href="pages/Avantages%20et%20Inconvénients.html">ici</a>
+            </li>
+            <li>
+                Sources, cliquez <a href="pages/Sources.html">ici</a>
             </li>
         </ul>
     </h2>
