--- a/pages/Sources.html
+++ b/pages/Sources.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Mini Projet - Sources</title>
+    <link rel="stylesheet" href="../style/style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-    <div id="source_top">
-        <h1>
-            Sources utilisées pour la création de cette présentation
-        </h1>
-    </div>
+<div id="source_top">
+    <dl><h1>Sources utilisées pour la création de cette présentation</h1>
+        <dt><h2>Document PDF</h2>
+        <dd>
+            <h3><a href="https://projet.eu.org/pedago/sin/term/1-persistance_information.pdf">https://projet.eu.org/pedago/sin/term/1-persistance_information.pdf</a>
+            </h3>
+        </dd>
+        <dt><h2>Polices de charactères</h2>
+        <dd>
+            <h3><a href="https://fonts.google.com/">https://fonts.google.com/</a>, Roboto, Roboto Slab, Comfortaa, Fira
+                Sans</h3>
+        </dd>
+    </dl>
+</div>
+<div id="source_crédits">
+    <h1>
+        Présentation créée par
+    </h1>
+    <h2>Shawn MUSSET</h2>
+    <h2>et Marc BENASSIS--AUGARREAU</h2>
+</div>
+<div id="footer">
+    <footer>
+        Retour à la <a href="../index.html">page principale</a>
+    </footer>
+</div>
 </body>
 </html>
