--- a/pages/Pérénité des données.html
+++ b/pages/Pérénité des données.html
@@ -11,6 +11,23 @@
 </head>
 <body>
 <div id="footer">
+    <div id="tableau">
+        <style type="text/css">
+            .tftable {font-size:12px;color:#333333;width:100%;border-width: 1px;border-color: #a9a9a9;border-collapse: collapse;}
+            .tftable th {font-size:12px;background-color:#b8b8b8;border-width: 1px;padding: 8px;border-style: solid;border-color: #a9a9a9;text-align:left;}
+            .tftable tr {background-color:#cdcdcd;}
+            .tftable td {font-size:12px;border-width: 1px;padding: 8px;border-style: solid;border-color: #a9a9a9;}
+            .tftable tr:hover {background-color:#ffffff;}
+            </style>
+            
+            <table class="tftable" border="1">
+            <tr><th></th><th>CD</th><th>DVD</th><th>Blu-ray</th><th>Clé USB</th><th>HDD (Hard Disk Drive)</th><th>SSD (Solid State Drive)</th><th>Cloud</th></tr>
+            <tr><td>Capacité standard</td><td>650Mo</td><td>4.7Go</td><td>50Go</td><td>256Go</td><td>256Go</td><td>4To</td><td>Row:1 Cell:8</td></tr>
+            <tr><td>Durée de vie</td><td>100 ans</td><td>50 ans</td><td>10 ans</td><td>10 ans</td><td>10 ans</td><td>7 ans</td><td>Row:2 Cell:8</td></tr>
+            <tr><td>Rapport prix/capacité</td><td>2.63€/Go</td><td>0.24€/Go</td><td>0.11€/Go</td><td>0.10€/Go</td><td>0.02€/Go</td><td>Row:3 Cell:7</td><td>Row:3 Cell:8</td></tr>
+            </table>            
+    </div>
+    
     <footer>
         Retour à la <a href="../index.html">page principale</a>
     </footer>
