Mise à jour des Sources.html

--- a/pages/Sources.html
+++ b/pages/Sources.html
@@ -22,6 +22,24 @@
             <h3><a href="https://fonts.google.com/">https://fonts.google.com/</a>, Roboto, Roboto Slab, Comfortaa, Fira
                 Sans</h3>
         </dd>
+        <dt><h2>Etude sur la durée de vie des moyens de stockage</h2></dt>
+        <dd>
+            <h3>
+                <a href="https://www.frandroid.com/produits-android/hardware/stockage/1682621_attention-les-disques-durs-ont-une-duree-de-vie-tres-courte">https://www.frandroid.com/produits-android/hardware/stockage/1682621_attention-les-disques-durs-ont-une-duree-de-vie-tres-courte</a>
+            </h3>
+        </dd>
+        <dd>
+            <h3><a href="https://www.backblaze.com/blog/backblaze-drive-stats-for-q1-2023/">https://www.backblaze.com/blog/backblaze-drive-stats-for-q1-2023/</a>
+            </h3>
+        </dd>
+        <dt><h2>Commercialisation des données</h2></dt>
+        <dd>
+            <h3><a href="https://www.latribune.fr/supplement/commercialisation-des-donnees-quels-enjeux-857593.html">https://www.latribune.fr/supplement/commercialisation-des-donnees-quels-enjeux-857593.html</a> </h3>
+        </dd>
+        <dt><h2>Conservation des données</h2></dt>
+        <dd>
+            <h3><a href="https://www.cnil.fr/fr/les-durees-de-conservation-des-donnees">https://www.cnil.fr/fr/les-durees-de-conservation-des-donnees</a> </h3>
+        </dd>
     </dl>
 </div>
 <div id="source_crédits">
