--- a/index.html
+++ b/index.html
@@ -15,25 +15,29 @@
 <body>
 <div id="index_top">
     <h1>
-        Mini Projet en SIN, sujet : La persistence de l'information
+        Mini Projet en SIN, sujet : La persistence de l'information.
     </h1>
+</div>
+<div id="txt_top">
+    <h2>Aujourd'hui, il est bon de savoir que toutes les données envoyées sur internet sont stockées à tout jamais. 
 </div>
 <div id="index_sommaire">
     <h2>
         <ul>
             <li>
-                Sécurité des données, cliquez <a href="pages/Sécurité%20des%20données.html">ici</a>
+                Sécurité des données, cliquez <a href="pages/Sécurité%20des%20données.html">ici.</a>
             </li>
             <li>
-                Pérénité des données, cliquez <a href="pages/Pérénité%20des%20données.html">ici</a>
+                Pérénité des données, cliquez <a href="pages/Pérénité%20des%20données.html">ici.</a>
             </li>
             <li>
-                Avantages et Inconvénients, cliquez <a href="pages/Avantages%20et%20Inconvénients.html">ici</a>
+                Avantages et Inconvénients, cliquez <a href="pages/Avantages%20et%20Inconvénients.html">ici.</a>
             </li>
             <li>
-                Sources, cliquez <a href="pages/Sources.html">ici</a>
+                Sources, cliquez <a href="pages/Sources.html">ici.</a>
             </li>
         </ul>
     </h2>
+    <div class="tenor-gif-embed" data-postid="26497624" data-share-method="host" data-aspect-ratio="1" data-width="25%"><a href="https://tenor.com/view/nerd-emoji-nerd-meme-radar-gif-26497624">Nerd Emoji Nerd GIF</a>from <a href="https://tenor.com/search/nerd+emoji-gifs">Nerd Emoji GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 </div>
 </body>
