--- a/pages/Sécurité des données.html
+++ b/pages/Sécurité des données.html
@@ -33,11 +33,45 @@
     <h4>Contrairement aux disques durs, dont le modèle date déjà des années 1950, la mémoire flash, beaucoup plus récente, s’appuie uniquement sur des composants électroniques. Popularisée notamment par les cartes mémoires SD et les clés USB, la mémoire Flash utilise la technologie NAND, une technique basée sur des semi-conducteurs, qui fonctionne sans alimentation électrique. Résultat : contrairement à la RAM (mémoire vive) qui ne conserve aucune donnée une fois privée d’électricité, les mémoires flash sont dites non volatiles, car elles sauvegardent des données sur le long terme, comme un disque dur. Grâce à son absence de processus mécanique évitant les temps de latence, le disque SSD offre plus de performance en vitesse de transfert. En contrepartie, le nombre de cycles d’écritures d’une NAND est compté, ainsi ce type de média est à considérer comme « jetable » car dispose d’une date de fin programmée.</h4>
 </div>
 
+<br>
+
+<div id="intro_commerc">
+    <h2>
+        La commercialisation de nos données par les GAFAM.
+    </h2>
+</div>
+
+<br>
+
+<div id="commerc">
+    <h3>
+        Les GAFAM ne s'en privent pas : elles récupèrent, sockent et vendent les données que nous leur fournissions chaque jour. Que ce soit en accepetant les cookies, en s'inscrivant sur les sites ou juste en surfant sur le site.
+        <br>
+        Nous pouvons par exemple utiliser le site <a href="https://grabify.link">https://grabify.link</a> afin de constater tout ce que les sites webs peuvent récupérer de nous uniquement en allant sur leur site web.
+    </h3>
+    <br>
+    <img src="https://i.imgur.com/IcctxEm.png">
+    <img src="https://i.imgur.com/TgVwja2.png">
+    <br>
+    <h3>
+        Google Adsense, par exemple, utilise notre sexe, notre âge, nos centres d'intérêt (de part nos recherches Google, notre historique Youtube, etc...), et toutes autres données qu'il peut collecter afin de créer une sorte de "fiche client" qui permettera de nous afficher des publicités extrêment bien ciblées.
+    </h3>
+    <br>
+    <h3>
+        Nous pouvons voir ci-dessous, dans une étude de <a href="https://www.quechoisir.org">https://www.quechoisir.org</a> que les consommateurs fournissent beaucoup de leurs informations personnelles sans même ce soucier de où elles atterrieriont.
+    </h3>
+    <img src="https://im.qccdn.fr/node/action-ufc-que-choisir-donnees-personnelles-elles-n-ont-pas-de-prix-ne-les-bradez-pas-12763/inline-15991.jpg", width="868", height="542">
+</div>
+
+<br>
+
 <div id="intro_osint">
     <h2>
         L'OSINT ou comment retrouver les données de n’importe qui.
     </h2>
 </div>
+
+<br>
 
 <div id="secu_osint">
     <h3>
