--- a/pages/Pérénité des données.html
+++ b/pages/Pérénité des données.html
@@ -21,7 +21,7 @@
             
         <table class="tftable" border="1">
         <tr><th></th><th>CD</th><th>DVD</th><th>Blu-ray</th><th>Clé USB</th><th>HDD (Hard Disk Drive)</th><th>SSD (Solid State Drive)</th><th>Cloud</th></tr>
-        <tr><td>Capacité standard</td><td>650Mo</td><td>4.7Go</td><td>50Go</td><td>256Go</td><td>256Go</td><td>4To</td><td>1 To</td></tr>
+        <tr><td>Capacité standard</td><td>650Mo</td><td>4.7Go</td><td>50Go</td><td>256Go</td><td>2To</td><td>1To</td><td>1To</td></tr>
         <tr><td>Durée de vie</td><td>100 ans</td><td>50 ans</td><td>10 ans</td><td>10 ans</td><td>10 ans</td><td>7 ans</td><td>Inquantifiable</td></tr>
         <tr><td>Rapport prix/capacité</td><td>2.63€/Go</td><td>0.24€/Go</td><td>0.11€/Go</td><td>0.10€/Go</td><td>0.02€/Go</td><td>0.07€/Go</td><td>0.03€/Go</td></tr>
         </table>            
