Reformatted the code

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </h1>
 </div>
 <div id="txt_top">
-    <h2>Aujourd'hui, il est bon de savoir que toutes les données envoyées sur internet sont stockées à tout jamais. 
+    <h2>Aujourd'hui, il est bon de savoir que toutes les données envoyées sur internet sont stockées à tout jamais.</h2>
 </div>
 <div id="index_sommaire">
     <h2>
@@ -38,6 +38,9 @@
             </li>
         </ul>
     </h2>
-    <div class="tenor-gif-embed" data-postid="26497624" data-share-method="host" data-aspect-ratio="1" data-width="25%"><a href="https://tenor.com/view/nerd-emoji-nerd-meme-radar-gif-26497624">Nerd Emoji Nerd GIF</a>from <a href="https://tenor.com/search/nerd+emoji-gifs">Nerd Emoji GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+    <div class="tenor-gif-embed" data-postid="26497624" data-share-method="host" data-aspect-ratio="1" data-width="25%">
+        <a href="https://tenor.com/view/nerd-emoji-nerd-meme-radar-gif-26497624">Nerd Emoji Nerd GIF</a>from <a
+            href="https://tenor.com/search/nerd+emoji-gifs">Nerd Emoji GIFs</a></div>
+    <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 </div>
 </body>
