--- a/pages/Sources.html
+++ b/pages/Sources.html
@@ -34,15 +34,18 @@
         </dd>
         <dt><h2>Commercialisation des données</h2></dt>
         <dd>
-            <h3><a href="https://www.latribune.fr/supplement/commercialisation-des-donnees-quels-enjeux-857593.html">https://www.latribune.fr/supplement/commercialisation-des-donnees-quels-enjeux-857593.html</a> </h3>
+            <h3><a href="https://www.latribune.fr/supplement/commercialisation-des-donnees-quels-enjeux-857593.html">https://www.latribune.fr/supplement/commercialisation-des-donnees-quels-enjeux-857593.html</a>
+            </h3>
         </dd>
         <dt><h2>Conservation des données</h2></dt>
         <dd>
-            <h3><a href="https://www.cnil.fr/fr/les-durees-de-conservation-des-donnees">https://www.cnil.fr/fr/les-durees-de-conservation-des-donnees</a> </h3>
+            <h3><a href="https://www.cnil.fr/fr/les-durees-de-conservation-des-donnees">https://www.cnil.fr/fr/les-durees-de-conservation-des-donnees</a>
+            </h3>
         </dd>
         <dt><h2>Concrètement, comment les données sont-elles stockées ?</h2></dt>
         <dd>
-            <h3><a href="https://www.data-labcenter.fr/aide/faq/concretement-comment-les-donnees-sont-elles-stockees/">https://www.data-labcenter.fr/aide/faq/concretement-comment-les-donnees-sont-elles-stockees/</a></h3>
+            <h3><a href="https://www.data-labcenter.fr/aide/faq/concretement-comment-les-donnees-sont-elles-stockees/">https://www.data-labcenter.fr/aide/faq/concretement-comment-les-donnees-sont-elles-stockees/</a>
+            </h3>
         </dd>
     </dl>
 </div>
