Updated the index top, will add more later if necessary

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </h1>
 </div>
 <div id="txt_top">
-    <h2>Aujourd'hui, il est bon de savoir que toutes les données envoyées sur internet sont stockées à tout jamais.</h2>
+    <h2>Aujourd'hui, il est bon de savoir que toutes les données envoyées sur internet sont stockées à tout jamais. En effet, les données sur internet sont un énorme enjeu économique et social. Que ce soit au niveau de leur sécurité, de leur pérénité, de leur moyen de stockage ou encore de leur vente. Il est donc nécessaire de se rendre compte que tout ce qui est mit sur internet y restera à jamais, et que les sites que nous consultons chaque jour collectent énormément de données sur nous (âge, sexe, profession, amis, centres d'intérêts, etc...).</h2>
 </div>
 <div id="index_sommaire">
     <h2>
