--- a/pages/Sécurité des données.html
+++ b/pages/Sécurité des données.html
@@ -76,7 +76,7 @@
     <h3>
         Google Adsense, par exemple, utilise notre sexe, notre âge, nos centres d'intérêt (de part nos recherches
         Google, notre historique Youtube, etc...), et toutes autres données qu'il peut collecter afin de créer une sorte
-        de "fiche client" qui permettera de nous afficher des publicités extrêment bien ciblées.
+        de "fiche client" qui permettera de nous afficher des publicités extrêment ciblées.
     </h3>
     <br>
     <h3>
