Updated many files; reformated code

--- a/pages/Pérénité des données.html
+++ b/pages/Pérénité des données.html
@@ -10,7 +10,19 @@
           rel="stylesheet">
 </head>
 <body>
+
+<div id="pérénité_intro">
+    <h2>
+        La pérénité des données est une problématique plus qu'importante. En effet, nous n'avons pas envie de voir
+        disparaître les photos que nous avons stockées sur une clé USB ou un disque dur en moins de 10 minutes : on
+        espère qu'elles y resteront "toute la vie".
+    </h2>
+</div>
+
 <div id="tableau">
+    <h3>Dans le tableau ci-dessous, sont notées les données des différents moyens de stockages grand public aisni que
+        leur durée de vie estimée.</h3>
+
     <style type="text/css">
         .tftable {
             font-size: 12px;
@@ -64,7 +76,7 @@
             <td>650Mo</td>
             <td>4.7Go</td>
             <td>50Go</td>
-            <td>256Go</td>
+            <td>32Go</td>
             <td>2To</td>
             <td>1To</td>
             <td>1To</td>
@@ -92,6 +104,24 @@
     </table>
 </div>
 <br>
+<div id="constat_pérénité">
+    <h3>
+        Un constat peut aujourd'hui être fait. En effet, Une clé USB, une carte SD, un disque SSD peuvent contenir du
+        texte, du son, des vidéos, des images et des tableaux de données, des jeux, etc… La question de leur pérennité
+        des données a été reléguée au second plan, le profit des fabricants (et donc le bénéfice) étant plus important
+        que tout. Pour l'industrie, la priorité était de développer des dispositifs rapides (USB-C et norme USB 4
+        version 2.0) et contenant des quantités d'informations toujours plus importantes (de 8 Go à 4 To suivant le
+        moyen de stockage utilisé).
+    </h3>
+</div>
+<div id="étude_pérénité">
+    <h3>
+        Une étude a été menée par le <a href="https://www.nist.gov/">NIST</a> (National Institute of Standards and
+        Technology) afin de déterminer la durée de vie des différents moyens de stockage. Cette étude a été réalisée en
+        2013 et les résultats sont les suivants :
+    </h3>
+</div>
+
 <div id="footer">
     <footer>
         Retour à la <a href="../index.html">page principale</a>
