--- a/pages/Avantages et Inconvénients.html
+++ b/pages/Avantages et Inconvénients.html
@@ -19,14 +19,15 @@
 
 <div id="WayBack">
     <h3>
-        
+        La WayBack machine est un site web crée par l'organisation <a href="https://www.archive.org">archive.org</a>. Elle a pour but d'archiver et de maintenir autant de sites et pages internet que possible. De part la participation volontaire de ses utilisateurs, nous pouvons littéralement retourner dans le temps et par exemple, voir à quoi ressemblait <a href="https://web.archive.org/web/20120429212452/https://www.youtube.com/channel/UCWeg2Pkate69NFdBeuRFTAw">la chaîne YouTube de Squeezie</a> le 29 avril 2012 ou encore <a href="http://web.archive.org/web/20131112235855/https://twitter.com/Gotaga">la page Twiter de Gotaga</a> le 12 novembre 2013.
     </h3>
 </div>
 
 <div id="Coût">
     <h3>
-        
+        Les coûts d'hébergement sur le cloud sont relativement faible. Sur OVH, plateforme française, un rack NAS coûte environ 5000€/mois HT, 6000€/mois TTC (soit environ 0.03€ le Go, 35€ le To).
     </h3>
+    <img src="https://i.imgur.com/b3Biu4U.png" alt="prix OVH">
 </div>
 
 <div id="Archivage">
