Finished the website !

--- a/index.html
+++ b/index.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <title>Mini-Projet</title>
     <meta charset="UTF-8"/>
-    <title>Mini Projet - Persistance de l'info</title>
-    <link rel="stylesheet" href="style/style.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-          rel="stylesheet">
-
-
+    <link rel="stylesheet" type="text/css" href="styles/styles.css"/>
 </head>
-
 <body>
-<div id="index_top">
-    <h1>
-        Mini Projet en SIN, sujet : La persistence de l'information.
-    </h1>
-</div>
-<div id="txt_top">
-    <h2>Aujourd'hui, il est bon de savoir que toutes les données envoyées sur internet sont stockées à tout jamais. En effet, les données sur internet sont un énorme enjeu économique et social. Que ce soit au niveau de leur sécurité, de leur pérénité, de leur moyen de stockage ou encore de leur vente. Il est donc nécessaire de se rendre compte que tout ce qui est mit sur internet y restera à jamais, et que les sites que nous consultons chaque jour collectent énormément de données sur nous (âge, sexe, profession, amis, centres d'intérêts, etc...).</h2>
-</div>
-<div id="index_sommaire">
-    <h3>
+<div id="container">
+    <div id="header"><h1><a id="top" href="index.html">Mini-Projet - Persistance de l'information</a></h1></div>
+    <div id="wrapper">
+        <div id="content">
+            <p><strong>Introduction</strong></p>
+            <p>Aujourd'hui, il est bon de savoir que toutes les données envoyées sur internet sont stockées à tout
+                jamais. En
+                effet, les données sur internet sont un énorme enjeu économique et social.</p>
+            <p>Que ce soit au niveau de leur
+                sécurité, de leur pérennité, de leur moyen de stockage ou encore de leur vente, divulguer ces
+                informations à n'importe qui ou n'importe quoi peut s'avérer dangereux.</p>
+            <p>Il est donc nécessaire de se
+                rendre compte que tout ce qui est mis sur internet y restera à jamais, et que les sites que nous
+                consultons
+                chaque jour collectent énormément de données sur nous (âge, sexe, profession, amis, centres d'intérêts,
+                etc.).</p>
+            <p>Il faut donc se rendre compte que les entreprises derrière Alphabet, Meta, Microsoft, etc. ne sont pas là
+                pour faire ami-ami avec nous en fournissant des services gratuits. Elles sont avant tout là pour faire
+                du profit, et ce, grâce à nos données.</p>
+        </div>
+    </div>
+    <div id="navigation">
+        <p><strong>Articles</strong></p>
         <ul>
-            <li>
-                Sécurité des données, cliquez <a href="pages/Sécurité%20des%20données.html">ici</a>.
-            </li>
-            <li>
-                Pérénité des données, cliquez <a href="pages/Pérénité%20des%20données.html">ici</a>.
-            </li>
-            <li>
-                Avantages et Inconvénients, cliquez <a href="pages/Avantages%20et%20Inconvénients.html">ici</a>.
-            </li>
-            <li>
-                Sources, cliquez <a href="pages/Sources.html">ici</a>.
-            </li>
+            <li><a href="pages/sécurité.html">Sécurité des données</a></li>
+            <li><a href="pages/pérénnité.html">Pérennité des données</a></li>
+            <li><a href="pages/A%20et%20I.html">Avantages et Inconvénients</a></li>
         </ul>
-    </h3>
-    <div class="tenor-gif-embed" data-postid="26497624" data-share-method="host" data-aspect-ratio="1" data-width="25%">
-        <a href="https://tenor.com/view/nerd-emoji-nerd-meme-radar-gif-26497624">Nerd Emoji Nerd GIF</a>from <a
-            href="https://tenor.com/search/nerd+emoji-gifs">Nerd Emoji GIFs</a></div>
-    <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+    </div>
+    <div id="sources">
+        <p><strong>Sommaire</strong></p>
+        <p>Nous allons voir comment nos données sont stockées et si elles le sont de manière sécurisée.</p>
+        <p>Nous verrons ensuite si nos données sont pérennes dans le temps, si elles ont une "date d'expiration".</p>
+        <p>Nous verrons enfin les avantages et les inconvénients de la persistance de l'information, et par extension, de
+            nos données.</p>
+    </div>
+    <div id="footer">
+        <p>By Marc BENASSIS--AUGARREAU & Shawn MUSSET - © 2023</p>
+    </div>
 </div>
 </body>
+</html>
