--- a/pages/Avantages et Inconvénients.html
+++ b/pages/Avantages et Inconvénients.html
@@ -1,87 +1,105 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Mini Projet - Avantages et Inconvénients</title>
-    <link rel="stylesheet" href="../style/style.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-          rel="stylesheet">
+    <title>Avantages et Inconvénients</title>
+    <meta charset="UTF-8"/>
+    <link rel="stylesheet" type="text/css" href="../styles/styles.css"/>
 </head>
 <body>
-
-<div id="avantages">
-    <h2>
-        Avantages :
-    </h2>
-</div>
-
-<div id="WayBack">
-    <h3>
-        La WayBack machine est un site web crée par l'organisation <a href="https://www.archive.org">archive.org</a>. Elle a pour but d'archiver et de maintenir autant de sites et pages internet que possible. De part la participation volontaire de ses utilisateurs, nous pouvons littéralement retourner dans le temps et par exemple, voir à quoi ressemblait <a href="https://web.archive.org/web/20120429212452/https://www.youtube.com/channel/UCWeg2Pkate69NFdBeuRFTAw">la chaîne YouTube de Squeezie</a> le 29 avril 2012 ou encore <a href="http://web.archive.org/web/20131112235855/https://twitter.com/Gotaga">la page Twiter de Gotaga</a> le 12 novembre 2013.
-    </h3>
-</div>
-
-<div id="Coût">
-    <h3>
-        Les coûts d'hébergement sur le cloud sont relativement faible. Sur OVH, plateforme française, un rack NAS coûte environ 5000€/mois HT, 6000€/mois TTC (soit environ 0.03€ le Go, 35€ le To).
-    </h3>
-    <img src="https://i.imgur.com/b3Biu4U.png" alt="prix OVH">
-</div>
-
-<div id="Archivage">
-    <h3>
-        
-    </h3>
-</div>
-
-<br>
-
-<div id="Inconvénients">
-    <h2>
-        Inconvénients :
-    </h2>
-</div>
-
-<div id="Probs">
-    <h3>
-        La persistance des données cause des problèmes écologiques et économiques avec le refroidissement des serveurs
-        qui consomme une grande quantité d'électricité et donc produit du CO2 et coûte beaucoup d'argent . À l'échelle
-        de la France, la préservation des données s'élèverait entre 2 et 20 milliards d'euros par an.
-    </h3>
-</div>
-
-<div id="format fichier">
-    <h3>
-        Les principaux inconvénients des différents formats de fichiers sont leur incompatibilité entre lecteurs et 
-        médias, ainsi que la péremption des systèmes de lecture.
-    </h3>
-</div>
-
-<div id="cloud">
-    <h3>
-        Il y a plusieurs inconvénients avec le Cloud comme, l'impossibilité pour le propriétaire de données de pouvoir localiser où 
-        elles sont archivées ainsi que leur répliques, la confidentialité et sécurité incertaine du au passage obligé par Internet, 
-        la vulnérabilité aux attaques informatiques, l'exposition éventuelle des serveurs à des risques naturels ou historiques, 
-        la longévité problématique du prestataire qui est présumée inférieure à celle espérée pour les archives, 
-        l'opacité générale du dispositif, ect.
-    </h3>
-</div>
-
-<div id="fiabilité">
-    <h3>
-        Il n'existe pas encore de système de stockage fiable à 100 % et comme pour tout autre système, on ne peut jamais compter sur 
-        une sécurité absolue. Par ailleurs, la technologie du numérique évolue très vite et il est impossible aujourd'hui de garantir 
-        une vraie pérennité sur trois points : le format des fichiers, la durée de vie des supports ainsi que celle des systèmes 
-        de lecture.
-    </h3>
-</div>
-
-<div id="footer">
-    <footer>
-        Retour à la <a href="../index.html">page principale</a>
-    </footer>
+<div id="container">
+    <div id="header"><h1><a id="top" href="../index.html">Mini-Projet - Avantages et Inconvénients</a></h1></div>
+    <div id="wrapper">
+        <div id="content">
+            <p><strong>Introduction</strong></p>
+            <p>La persistance de l'information a ses avantages et ses inconvénients. Nous allons les lister
+                ci-dessous.</p>
+            <p><strong>Avantages : </strong></p>
+            <p><strong>WayBack Machine</strong></p>
+            <p>La WayBack machine est un site web créé par l'organisation <a
+                    href="https://www.archive.org">archive.org</a>. Elle a pour but d'archiver et de maintenir autant de
+                sites et pages internet que possible. Grâce à la participation volontaire de ses utilisateurs, nous
+                pouvons littéralement retourner dans le temps et par exemple, voir à quoi ressemblait <a
+                        href="https://web.archive.org/web/20120429212452/https://www.youtube.com/channel/UCWeg2Pkate69NFdBeuRFTAw">la
+                    chaîne YouTube de Squeezie</a> le 29 avril 2012 ou encore <a
+                        href="https://web.archive.org/web/20131112235855/https://twitter.com/Gotaga">la page Twitter de
+                    Gotaga</a> le 12 novembre 2013.</p>
+            <p><strong>Coût</strong></p>
+            <p>Les coûts d'hébergement sur le cloud sont relativement faible. Sur OVH, plateforme française, un rack NAS
+                coûte environ 5000€/mois HT, 6000€/mois TTC (soit environ 0.03€ le Go, 35€ le To HT).</p>
+            <figure>
+                <img src="https://i.imgur.com/b3Biu4U.png" alt="Prix OVH">
+                <figcaption>Prix de location OVH</figcaption>
+            </figure>
+            <p><strong>Archivage</strong></p>
+            <p>L'archivage intensif (en France grâce à l’INA) permet donc une sauvegarde des faits marquants de
+                l’internet. Exemple : l’archivage des millions de skyblogs, alors que la plateforme ferme ses serveurs.
+                L’INA prévoit de son côté de sauvegarder 1,6 million de blogs, en prenant ceux qui ont plus de mille
+                vues, dix publications et dix abonnés. À ce jour, 750 blogs ont été sélectionnés et collectés par leur
+                lien avec le domaine audiovisuel français, notamment les émissions de télévision et de radio ; par
+                exemple, 130 blogs sur Plus belle la vie et une vingtaine sur Secret Story sont concernés. Ils seront
+                sauvegardés grâce aux technologies de collecte développées en propre par l’INA pour assurer sa mission
+                de dépôt légal du web francophone média et qui a permis depuis 2006 d’archiver par exemple plus de 17
+                000 sites web. L'objectif est de collecter, préserver et mettre à disposition ce patrimoine aux
+                générations futures et aux chercheurs.</p>
+            <p><strong>Inconvénients : </strong></p>
+            <p><strong>Écologie</strong></p>
+            <p>La persistance des données cause des problèmes écologiques et économiques avec le refroidissement des
+                serveurs qui consomme une grande quantité d'électricité et donc produit du CO2 et coûte beaucoup
+                d'argent. À l'échelle de la France, la préservation des données s'élèverait entre 2 et 20 milliards
+                d'euros par an. Cela représente entre 0,1 et 1 % du PIB français.</p>
+            <p><strong>Format de fichiers</strong></p>
+            <p>Problème de format de fichiers propriétaires (impossibilité d’accès, corruption). Péremption des systèmes
+                de lectures (CD, DVD, USB) : Si le numérique apporte un certain nombre d'avantages par rapport au
+                support papier, la péremption des systèmes de lecture constitue une limite propre - et de taille - à ce
+                procédé. Ces questions de pérennité dû à la relecture sont d'ailleurs communes à tous les supports
+                indirects (cassettes, CD, bandes, disquettes, etc.).</p>
+            <p>Ceci est particulièrement exact avec la technologie DVD (Digital Versatile Disc) qui ne propose pas moins
+                de 7 formats différents répartis entre formats de stockage (DVD-Rom et ses dérivés : DVD-Vidéo et
+                DVD-Audio) et formats enregistrables (DVD-R, DVD-RW, DVD-Ram et le DVD+RW).</p>
+            <p>Des pertes importantes ont déjà eu lieu. Le 27 juillet 2001, l'agence Reuters a parlé du cas Joseph
+                Miller, neurobiologiste de l'Université de Californie du Sud, qui avait cherché à consulter certaines
+                données que les sondes Viking avaient envoyées de Mars dans les années 1970. Mais lorsque la NASA sortit
+                les bandes magnétiques, l'agence spatiale se rendit compte que ces données étaient enregistrées dans un
+                format désormais illisible. Et les programmateurs qui avaient travaillé sur le logiciel étaient tous
+                décédés. </p>
+            <p><i>Le manque de standardisation entraîne des incompatibilités au sein des lecteurs et des médias, et rend
+                l'utilisation d'une certaine technologie risquée pour les utilisateurs.</i></p>
+            <p><strong>Le cloud</strong></p>
+            <p>
+            <ul>
+                <li>Impossibilité pour le propriétaire de pouvoir localiser ses archives et leurs répliques,</li>
+                <li>Confidentialité et sécurité incertaines, du fait du passage obligé par l’Internet,</li>
+                <li>Vulnérabilité aux attaques informatiques,</li>
+                <li>Exposition éventuelle des serveurs à des risques naturels ou historiques,</li>
+                <li>Longévité problématique du prestataire, présumée inférieure à celle espérée pour les archives,</li>
+                <li>Opacité générale du dispositif</li>
+            </ul>
+            </p>
+            <p><strong>Fiabilité</strong></p>
+            <p>Il n'existe pas encore de système de stockage fiable à 100 % et comme pour tout autre système, on ne peut
+                jamais compter sur une sécurité absolue. Par ailleurs, la technologie du numérique évolue très vite et
+                il est impossible aujourd'hui de garantir une vraie pérennité sur trois points : le format des fichiers,
+                la durée de vie des supports ainsi que celle des systèmes de lecture.</p>
+        </div>
+    </div>
+    <div id="navigation">
+        <p><strong>Articles</strong></p>
+        <ul>
+            <li><a href="../index.html">Accueil</a></li>
+            <li><a href="sécurité.html">Sécurité des données</a></li>
+            <li><a href="pérénnité.html">Pérennité des données</a></li>
+            <li><a href="A%20et%20I.html">Avantages et Inconvénients</a></li>
+        </ul>
+    </div>
+    <div id="sources">
+        <p><strong>Sources</strong></p>
+        <p><a href="https://www.ina.fr/">INA</a></p>
+        <p><a href="https://archive.org/web/">Internet Archive: Wayback Machine</a></p>
+        <p><a href="https://www.ovhcloud.com/fr/storage-solutions/nas-ha/">Nos offres de stockage NAS | OVHcloud</a></p>
+    </div>
+    <div id="footer">
+        <p>By Marc BENASSIS--AUGARREAU & Shawn MUSSET - © 2023</p>
+    </div>
 </div>
 </body>
 </html>
